--- a/main/templates/mypage/myorder.html
+++ b/main/templates/mypage/myorder.html
@@ -26,7 +26,7 @@
 
                         <ul class="list">
                             <li class="thead">
-                                <span class="orderNum">주문번호</span>
+                                <span class="orderNum">번호</span>
                                 <span class="payDate">결제일</span>
                                 <span class="content">내용</span>
                                 <span class="cost">금액</span>
@@ -39,7 +39,7 @@
                                 <span class="content">{{userInfo.prd_info}}</span>
                                 <span class="cost">{{userInfo.prd_total_price}}</span>
                                 <span class="etc">
-                                    <a href="#" class="btn order">상세보기</a>
+                                    <a href="javascript:void(0);" onclick="javascript:goDetail({{userInfo.pay_idx}})" class="btn order">상세보기</a>
                                 </span>
                             </li>
                             {% endfor %}
@@ -51,6 +51,25 @@
 
 
       {% include "common/footer.html" %}
+
+        <script>
+        function goDetail(data)
+        {
+            var newForm = $('<form></form>');
+
+            newForm.attr("name", "myorder_detail");
+            newForm.attr("method", "post");
+            newForm.attr("action", "/myorder_detail/");
+
+            newForm.append($('<input/>', {type: 'hidden', name: 'csrfmiddlewaretoken', value : '{{ csrf_token }}'}));
+            newForm.append($('<input/>', {type: 'hidden', name: 'pay_idx', value : data }));
+
+            newForm.appendTo('body');
+            newForm.submit();
+
+        }
+
+    </script>
 
     </div>
 </body></html>
