--- a/main/templates/payment/order.html
+++ b/main/templates/payment/order.html
@@ -242,7 +242,7 @@
                                                    <div class="row padding-all-15 col-xs-3 border-dashed-right" style="display:inline-block;">
                                                        <div class="font-16">
                                                            <input name="addr" type="radio" value="1"checked>
-                                                           <strong>{{userDetail.regi_receiver1_name}}</strong>(기본 배송지)
+                                                           <strong>{{userDetail.regi_name}}</strong>(기본 배송지)
                                                        </div>
                                                        <div class="font-16">
                                                            {{userDetail.regi_receiver1_add02}}
@@ -265,7 +265,7 @@
                                                            ({{userDetail.regi_receiver2_add01}})
                                                        </div>
                                                       <div class="font-16">
-                                                           {{userDetail.regi_phone}}
+                                                           {{userDetail.regi_receiver2_phone}}
                                                        </div>
                                                       {% endif %}
                                                   </div>
