--- a/main/templates/lounge/coding_lounge.html
+++ b/main/templates/lounge/coding_lounge.html
@@ -18,36 +18,61 @@
 <!-- sub visual -->
 
 <!-- codingLounge list -->
-        <div class="codingLounge_list">
-            <ul class="thumb_list pagination">
-                 {% for loungeList in lounge_list %}
-                <li>
-                    <a href="javascript:void(0);" onclick="javascript:goloungeView('{{loungeList.video_id}}');" class="btn brd_detail">
-                        <img src="/static/resource/img/lounge/{{loungeList.data_name}}/{{loungeList.img}}" alt="코딩 라운지 리스트 썸네일">
-                    </a>
-                    <div class="text_area">
-                        <span class="title">{{loungeList.title}}</span>
-                        <p class="writer">Project by {{loungeList.user}}</p>
-                    </div>
-                </li>
-                {%endfor%}
-            </ul>
-            <div class="paging_area">
-                <a><img src="{% static 'resource/img/sub/go_first.png' %}"></a>
-                <a><img src="{% static 'resource/img/sub/go_prev.png' %}"></a>
-                <a class="active">1</a>
-                <a>2</a>
-                <a>3</a>
-                <a><img src="{% static 'resource/img/sub/go_next.png' %}"></a>
-                <a><img src="{% static 'resource/img/sub/go_last.png' %}"></a>
+    <div class="codingLounge_list">
+        <div class="filter_area fixed">
+            <div class="search_area">
+                 <select id="sort">
+                    <option value="0">sort by</option>
+                    <option value="new" selected="selected">최신순</option>
+<!--                    <option value="popular">인기순</option>-->
+                </select>
+                <select name="category" id="category">
+                    <option value="0">카테고리</option>
+                     {% for categoryLst in category_list %}
+                    <option value="{{categoryLst.loungeList_idx}}">{{categoryLst.data_name}}</option>
+                    {%endfor%}
+                </select>
+                <div class="input_area_lounge">
+                     <input type="text" name="search_box" id="search_box" placeholder="검색해 보세요.">
+                </div>
+                 <div class="btn_area">
+                    <a class="btn" href="javascript:void(0);" onclick="javascript:goSearch();">&nbsp;검색하기&nbsp;</a>
+                 </div>
             </div>
         </div>
+
+        <ul class="thumb_list pagination">
+             {% for loungeList in lounge_list %}
+            <li>
+                <a href="javascript:void(0);" onclick="javascript:goloungeView('{{loungeList.video_id}}');" class="btn brd_detail">
+                    <img src="/static/resource/img/lounge/{{loungeList.data_name}}/{{loungeList.img}}" alt="코딩 라운지 리스트 썸네일">
+                </a>
+                <div class="text_area">
+                    <span class="title">{{loungeList.title}}</span>
+                    <p class="writer">Project by {{loungeList.user}}</p>
+                </div>
+            </li>
+            {%endfor%}
+        </ul>
+<!--            <div class="paging_area">-->
+<!--                <a><img src="{% static 'resource/img/sub/go_first.png' %}"></a>-->
+<!--                <a><img src="{% static 'resource/img/sub/go_prev.png' %}"></a>-->
+<!--                <a class="active">1</a>-->
+<!--                <a>2</a>-->
+<!--                <a>3</a>-->
+<!--                <a><img src="{% static 'resource/img/sub/go_next.png' %}"></a>-->
+<!--                <a><img src="{% static 'resource/img/sub/go_last.png' %}"></a>-->
+<!--            </div>-->
+    </div>
 
 
     {% include "common/banner_bottom.html" %}
     {% include "common/footer.html" %}
 
     <script>
+        $(document).ready(function() {
+            $("#category").val({{current_category}}).attr("selected","selected");
+        });
         function goloungeView(video)
         {
             var newForm = $('<form></form>');
@@ -61,6 +86,29 @@
 
             newForm.appendTo('body');
             newForm.submit();
+        }
+
+        function goSearch()
+        {
+
+            var select_id = document.getElementById('sort');
+            var select_category_id = $("#category option:selected").val();
+            var searchBox = $('[name=search_box]').val()
+
+            var newForm = $('<form></form>');
+
+            newForm.attr("name", "lounge_search_form");
+            newForm.attr("method", "post");
+            newForm.attr("action", "/search_lounge/");
+
+            newForm.append($('<input/>', {type: 'hidden', name: 'csrfmiddlewaretoken', value : '{{ csrf_token }}'}));
+            newForm.append($('<input/>', {type: 'hidden', name: 'sort', value : select_id.value }));
+            newForm.append($('<input/>', {type: 'hidden', name: 'category', value : select_category_id }));
+            newForm.append($('<input/>', {type: 'hidden', name: 'search_input', value : searchBox }));
+
+            newForm.appendTo('body');
+            newForm.submit();
+
         }
 
     </script>
