--- a/static/resource/css/layout.css
+++ b/static/resource/css/layout.css
@@ -200,6 +200,69 @@ body,th,td,input,select,textarea,button {font-size:24px;}
 	border-radius: 5em;
 }
 
+.codingLounge_list .filter_area {
+	width:410px;
+}
+.codingLounge_list .filter_area.scr {
+	position:absolute !important;
+	top:0;
+	right:0.83em;
+}
+.codingLounge_list .filter_area.end {
+	position:absolute;
+	top:auto;
+	bottom:0;
+	right:0.83em;
+}
+
+.codingLounge_list .filter_area .search_area {
+	width:1110px;
+}
+
+.codingLounge_list .filter_area .search_area select {
+	margin-right:20px;
+	padding:0.5em;
+	font-size:0.75em;
+	box-sizing:border-box;
+	width:50%;
+	font-family: inherit;
+	background:white;
+	border-color:#eee;
+}
+
+
+.codingLounge_list .filter_area .search_area .input_area_lounge {
+    box-sizing:border-box;
+	padding:0.5em;
+	display:flex;
+	justify-content:flex-start;
+	align-items:center;
+	width:50%;
+	margin-left:-10px;
+}
+
+.codingLounge_list .filter_area .search_area .input_area_lounge input{
+    font-size:0.75em;
+    width:100%;
+    height: 100%; /* 높이값 초기화 */
+    line-height : normal; /* line-height 초기화 */
+     padding: .4em .5em;
+    font-family: inherit; /* 폰트 상속 */
+    border: 1px solid #eee; /*#999; */
+    border-radius: 0; /* iSO 둥근모서리 제거 */
+    outline-style: none; /* 포커스시 발생하는 효과 제거를 원한다면 */
+    -webkit-appearance: none; /* 브라우저별 기본 스타일링 제거 */
+
+}
+
+.codingLounge_list .filter_area .search_area .btn_area a.btn {
+	display:block;
+	width:100%;
+	font-size:0.66em;
+	text-align:center;
+	border-radius:5em;
+}
+
 .codingKit_list .filter_area {
 	margin-left:110px;
 	width:210px;
@@ -574,6 +637,8 @@ body,th,td,input,select,textarea,button {font-size:24px;}
 	border:1px solid #b14739;
 	border-radius:3px;
 }
+
+
 
 /* review list */
 .review_top {
