order page bug modify

--- a/main/templates/mypage/myorder_detail.html
+++ b/main/templates/mypage/myorder_detail.html
@@ -36,7 +36,7 @@
                                 </li>
                                 <li>
                                     <span>주문처리상태</span>
-                                    <p>배송완료</p>
+                                    <p>{{payUserInfo.pay_user_status.userStatus}}</p>
                                 </li>
                                 <li>
                                     <span>주문상품</span>
