order page bug modify

--- a/main/templates/class/class_detail.html
+++ b/main/templates/class/class_detail.html
@@ -21,7 +21,7 @@
         <div class="codingKit_list detail">
             <div class="lecture_list detail">
                 <div class="detail_area">
-                    <img src="{% static 'resource/img/Trashcan/trashcan_main.jpg' %}" alt="상품상세 이미지">
+                    <img src="{{prd_detail.img}}" alt="상품상세 이미지">
 
                     <div class="precaution">
                         <span class="cautionTitle">구매 전 유의사항</span>
