--- a/main/templates/login/login.html
+++ b/main/templates/login/login.html
@@ -9,8 +9,8 @@
         <form id="login_form">
             <div class="input_area">
                 {% csrf_token %}
-                <input type="text" name="login_id" id="login_id" class="login_inp" placeholder="이메일을 입력해주세요." />
-                <input type="password" name="login_pass" id="login_pass" class="login_inp" placeholder="비밀번호를 입력해주세요." />
+                <input type="text" name="login_id" id="login_id" class="login_inp" onkeyup="enterkey();"  placeholder="이메일을 입력해주세요." />
+                <input type="password" name="login_pass" id="login_pass" class="login_inp" onkeyup="enterkey();"  placeholder="비밀번호를 입력해주세요." />
             </div>
         </form>
         <div class="btn_area">
@@ -54,6 +54,14 @@
 <script src="//cdn.jsdelivr.net/gh/stove99/jquery-modal-sample@v1.4/js/modal.js"></script>
 
 <script>
+    function enterkey()
+    {
+        if (window.event.keyCode == 13) {
+
+             // 엔터키가 눌렸을 때 실행할 내용
+             login_submit();
+        }
+    }
 
     function login_submit()
     {
